# ITMO-CT

./: .gitignore  README.md
algo/lab1/: A.java  B.java  C.java  D.java  E.java  F.java  G.java  H.java  I.java  J.java  Test.java  main.cpp
algo/lab2/: A.java  AlphabetWars.java  B.java  C.java  D.java  E.java  F.cpp  F.java  H.java  I.cpp  I.java  J.java  K.java  Main.java  RomanNumerals.java  Test.java
algo/lab3/: A.java  AhoTree.java  B.java  C.java  D.java  E.java  F.java  G.java  H.java  J.java  M.java  StringTree.java
algo/lab4/: A.java  B.java  C.java  D.java  E.java  F.java
algo/lab5/: A.java  B.java  C.java  D.java  F.java  G.java  H.java  I.java  J.java  K.java  main.cpp
algo/lab6/: A.java  B.java  C.java  D.java  F.java  Test.java  main.cpp  multy.cpp
data-analysis/lab1/: Lab-1.ipynb  Pipfile  second.ipynb  third.ipynb
data-analysis/lab3/: Lab-3.ipynb  Pipfile  first.ipynb
data-analysis/lab4/: Lab-4.ipynb  Pipfile  first.ipynb
data-analysis/lab5/: Lab-5.ipynb  Pipfile  first.ipynb
db/hw1/: .fifthTask.sql.swp  README.md  fifthTask.sql
db/hw3/: REPORT.md
db/hw4/: REPORT.md  insert.sql
db/hw5/: 10.sql  data-all-for-poligon.txt
db/hw9/: Generator.java
db/splitwise/: README.md  TODO.md  gen.kt  insert.kt
db/test-work/: .gitignore
discrete-mathematics/lab1/: A.cpp  A.java  B.java  C.java  D.java  E.java  F.java  G.java  H.java  main.cpp
discrete-mathematics/lab2/: A.java  B.java  C.java  Test.java
discrete-mathematics/lab3/: A.java  B.java  C.java  F.java  G.java  I.java
discrete-mathematics/lab4/: aplusb.out  balanced.out  convertto2.out  factorial.out  infixlogic.out  less.out  mirror.out  multiplication.out  postfixlogic.out  reverse.out  sorting.out  tandem.out
evolv/: OneMax.kt
fp/exam/: Lecture_1.ipynb  Lecture_10.ipynb  Lecture_11.ipynb  Lecture_12.ipynb  Lecture_13.ipynb  Lecture_2.ipynb  Lecture_3.ipynb  Lecture_4.ipynb  Lecture_5.1.ipynb  Lecture_5.2.ipynb  Lecture_5.5.ipynb  Lecture_6.ipynb  Lecture_7.ipynb  Lecture_8.ipynb  (+1 more)
fp/fp-homework/hw1/: hw1.cabal
fp/fp-homework/hw1/src/HW1/: T1.hs  T2.hs  T3.hs  T4.hs  T5.hs  T6.hs  T7.hs
fp/fp-homework/hw3/: Task.md  hw3.cabal
fp/fp-homework/hw3/app/: Main.hs
fp/fp-homework/hw3/src/HW3/: Action.hs  Base.hs  Evaluator.hs  Helpers.hs  Parser.hs  Pretty.hs
java-advanced/: clean.sh  tester.sh  update.sh
(+2453 files in other folders)
